store cart in db and code refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>E-shop N3XT</name>
+    <name>spring-boot-shop</name>
     <description>E-commerce shop</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.5</version>
+        <version>3.3.0</version>
         <relativePath/>
     </parent>
 
@@ -56,7 +56,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!-- Thymeleaf Springsecruity Extras -->
+        <!-- Thymeleaf Springsecurity Extras -->
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
